<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/viewItem"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:paddingBottom="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idLabel"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/viewNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameLabel"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/viewLocationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationLabel"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/viewTypeText"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/typeLabel"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/viewWidthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/widthLabel"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/viewHeightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/heightLabel"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/viewLengthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/lengthLabel"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/viewStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/statusLabel"
                android:padding="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>